--- a/README
+++ b/README
@@ -24,7 +24,7 @@ documentation for more details. If I can get motivated, an object
 wrapper that would be similar to the C++ API may be forthcoming, so watch
 this space.
 
-For comments and complaints, refer to the Google Code page:
+For comments complaints and downloads, refer to the Google Code page:
 
 http://code.google.com/p/libtcod-d
 
