--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ----------------------------------------
-           libtcod-d 1.4.2-2
-This file last updated: January 23, 2010
+           libtcod-d 1.5.0-1
+This file last updated: 19th of February, 2010
 ----------------------------------------
 
 libtcod-d is a set of bindings for using the excellent 
