--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+*NOTE*: This repository is unmaintained. You should use [jaydg's fork](https://github.com/jaydg/libtcod-d) instead!
+
+---
+
 ----------------------------------------
            libtcod-d 1.5.0-1
 ----------------------------------------
